# cv-profile-assessment

./: .gitignore  DEVELOPMENT_v020.md  FINAL_SUMMARY_v020.md  README.md  STATUS.md  pyproject.toml  requirements.txt
.github/: repo-metadata.json
cv_profile_assessment/: __init__.py  helpers.py  language_detection.py  types.py  usage_history.py
data/sample_cvs/: data_scientist_italy.txt  junior_fs_developer.txt  senior_swe_vienna.txt
data/sample_jobs/: devops_remote.json  frontend_munich.json  nlp_research_zurich.json  senior_backend_vienna.json
data/sample_profiles/: marcus_weber.json  sarah_chen.json
integration/: __init__.py  job_filters.py  scout_adapter.py
matching/: __init__.py  deal_breakers.py  pipeline.py  scorer.py  tfidf_matcher.py
parser/: __init__.py  docx_extractor.py  entity_extractor.py  pdf_extractor.py  section_segmenter.py  skill_extractor.py
profile_builder_pkg/: __init__.py  profile_builder.py  validator.py
schema/: profile_schema.json
scripts/: demo_v020.py  match_jobs.py  match_scout_jobs.py  match_to_pdf.py  parse_cv.py  run_pipeline.sh  seed_scout_db_from_samples.py
tests/: conftest.py  test_german_i18n.py  test_job_filters.py  test_match_scout_jobs_invariance.py  test_scout_adapter.py  test_smoke.py
tests/fixtures/: scout_schema.sql
wiki/: CONTINUITY.md  DEVELOPMENT_LOG.md  FRESH-SESSION-CONTINUATION.md  FRESH-SESSION-v020.md
wiki/audits/: cv-profile-assessment-phase6-audit-2026-06-29.md
